--- a/literature.bib
+++ b/literature.bib
@@ -55,7 +55,7 @@
        publisher = "{National Electrical Manufacturers Association}",
        title = "Digital Imaging and Communications in Medicine (DICOM) - Part 5: Data Structures and Encoding",
        year = "2011",
-       url = "{ftp://medical.nema.org/medical/dicom/2011/11_03pu.pdf}"
+       url = "{ftp://medical.nema.org/medical/dicom/2011/11_05pu.pdf}"
    }
  
   @misc{dicom:dd,
@@ -139,4 +139,10 @@
     	PUBLISHER    = "Springer Vieweg",
     	YEAR         = "2013",
     }
-  
+
+@BOOK{balzert:swa,
+    	AUTHOR       = "Balzert, Helmut",
+    	TITLE        = "Lehrbuch der Softwaretechnik - Entwurf, Implementierung, Installation und Betrieb",
+    	PUBLISHER    = "Spektrum",
+    	YEAR         = "2011",
+    }
