--- a/master_title.tex
+++ b/master_title.tex
@@ -17,7 +17,7 @@
 
 \small 
 
-am Labor für medizinische Bildverarbeitung, Algorithmen und Krankenhaus IT \\[1cm]
+im Labor für medizinische Bildverarbeitung, Algorithmen und Krankenhaus IT \\[1cm]
 zur Erlangung des akademischen Grades\\
 \textbf{Master of Science (M. Sc.)} \\[1cm]
 
